fix(style.css): change color of text to more readable white.

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
   align-items: center;
   font-family: sans-serif;
   background-color: #01161e;
-  color: #eff6e0;
+  color: #fafafa;
 }
 
 .calculator{
@@ -49,7 +49,7 @@ body {
   flex: 1;
   font-size: 150%;
   background-color: #003049;
-  color: #eff6e0;
+  color: #fafafa;
   border-radius: 15px;
   border: 0px;
   box-shadow: 0px 4px #01161e;
